fixed base spacing to use the calc-rem function

--- a/public/static/scss/utilities/_base-spacing.scss
+++ b/public/static/scss/utilities/_base-spacing.scss
@@ -22,12 +22,12 @@ pre,
 .media,
 .island,
 .islet {
-    margin-bottom:$base-spacing-unit;
-    margin-bottom:($base-spacing-unit / $base-font-size)*1rem;
+    margin-bottom: $base-spacing-unit;
+    margin-bottom: calc-rem($base-spacing-unit);
 
     .islet &{
-        margin-bottom:$base-spacing-unit / 2;
-        margin-bottom:(($base-spacing-unit / $base-font-size) / 2)*1rem;
+        margin-bottom: $base-spacing-unit / 2;
+        margin-bottom: calc-rem($base-spacing-unit / 2);
     }
 }
 
@@ -36,8 +36,8 @@ pre,
  * treatment regarding vertical rhythm.
  */
 hr {
-    margin-bottom:$base-spacing-unit - 2px;
-    margin-bottom:(($base-spacing-unit - 2px) / $base-font-size)*1rem;
+    margin-bottom: $base-spacing-unit - 2px;
+    margin-bottom: calc-rem($base-spacing-unit - 2px);
 }
 
 /**
@@ -45,6 +45,6 @@ hr {
  * by a consistent amount. Define that amount once, here.
  */
 ul,ol,dd {
-    margin-left:2 * $base-spacing-unit;
-    margin-left:(2 * $base-spacing-unit / $base-font-size)*1rem;
+    margin-left: (2 * $base-spacing-unit);
+    margin-left: calc-rem(2 * $base-spacing-unit);
 }
